--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> <html class=no-js> <head> <meta charset=utf-8> <title>bonusTime3</title> <meta name=description content=""> <meta name=viewport content="width=device-width"> <link rel="shortcut icon" href=/6df2b309.favicon.ico> <!-- Place favicon.ico and apple-touch-icon.png in the root directory --> <link rel=stylesheet href=styles/9c307a9d.vendor.css> <link rel=stylesheet href=styles/987a2826.main.css>  <body> <div> <div class=.ip-slideshow> <div class=ip-slideshow></div> </div> <div class=footer> <p><span class="glyphicon glyphicon-heart"></span> Supported by Lab μ</p> </div> </div> <script src=scripts/9e2a73af.vendor.js></script> <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. --> <script>(function (b, o, i, l, e, r) {
+<!DOCTYPE html> <html class=no-js> <head> <meta charset=utf-8> <title>bonusTime3</title> <meta name=description content=""> <meta name=viewport content="width=device-width"> <link rel="shortcut icon" href=/6df2b309.favicon.ico> <!-- Place favicon.ico and apple-touch-icon.png in the root directory --> <link rel=stylesheet href=styles/9c307a9d.vendor.css> <link rel=stylesheet href=styles/987a2826.main.css>  <body> <div> <!--<button onclick="onclickB()">click</button>--> <div class=.ip-slideshow> <div class=ip-slideshow></div> </div> <div class=footer> <p><span class="glyphicon glyphicon-heart"></span> Supported by Lab μ</p> </div> </div> <script src=scripts/9e2a73af.vendor.js></script> <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. --> <script>(function (b, o, i, l, e, r) {
     b.GoogleAnalyticsObject = l;
     b[l] || (b[l] =
       function () {
@@ -11,4 +11,4 @@
     r.parentNode.insertBefore(e, r)
   }(window, document, 'script', 'ga'));
   ga('create', 'UA-XXXXX-X');
-  ga('send', 'pageview');</script> <script src=scripts/cb7562c6.plugins.js></script> <script src=scripts/0d894653.animate.js></script>  
+  ga('send', 'pageview');</script> <script src=scripts/cb7562c6.plugins.js></script> <script src=scripts/93dc0a09.animate.js></script>  
