再也不改了。。我居然能在git上说出这种话。。

--- a/index.html
+++ b/index.html
@@ -1,14 +1,1 @@
-<!DOCTYPE html> <html class=no-js> <head> <meta charset=utf-8> <title>bonusTime3</title> <meta name=description content=""> <meta name=viewport content="width=device-width"> <link rel="shortcut icon" href=/6df2b309.favicon.ico> <!-- Place favicon.ico and apple-touch-icon.png in the root directory --> <link rel=stylesheet href=styles/9c307a9d.vendor.css> <link rel=stylesheet href=styles/987a2826.main.css>  <body> <div> <!--<button onclick="onclickB()">click</button>--> <div class=.ip-slideshow> <div class=ip-slideshow></div> </div> <div class=footer> <p><span class="glyphicon glyphicon-heart"></span> Supported by Lab μ</p> </div> </div> <script src=scripts/9e2a73af.vendor.js></script> <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. --> <script>(function (b, o, i, l, e, r) {
-    b.GoogleAnalyticsObject = l;
-    b[l] || (b[l] =
-      function () {
-        (b[l].q = b[l].q || []).push(arguments)
-      });
-    b[l].l = +new Date;
-    e = o.createElement(i);
-    r = o.getElementsByTagName(i)[0];
-    e.src = '//www.google-analytics.com/analytics.js';
-    r.parentNode.insertBefore(e, r)
-  }(window, document, 'script', 'ga'));
-  ga('create', 'UA-XXXXX-X');
-  ga('send', 'pageview');</script> <script src=scripts/cb7562c6.plugins.js></script> <script src=scripts/93dc0a09.animate.js></script>  
+<!DOCTYPE html> <html class=no-js> <head> <meta charset=utf-8> <title>bonusTime3</title> <meta name=description content=""> <meta name=viewport content="width=device-width"> <link rel="shortcut icon" href=/6df2b309.favicon.ico> <!-- Place favicon.ico and apple-touch-icon.png in the root directory --> <link rel=stylesheet href=styles/9c307a9d.vendor.css> <link rel=stylesheet href=styles/1ee40177.main.css>  <body> <div> <!--<button onclick="onclickB()">click</button>--> <div class=.ip-slideshow> <div class=ip-slideshow></div> </div> <div class=footer> <p><span class="glyphicon glyphicon-heart"></span> Supported by Lab μ</p> </div> <img class=logo src="images/bca0116b.logo.png"> </div> <script src=scripts/9e2a73af.vendor.js></script> <script src=scripts/cb7562c6.plugins.js></script> <script src=scripts/6c0fe724.animate.js></script>  
